force-app/main/default/objects/Cible__c/Cible__c.object-meta.xml
<CustomObject>
    <label>Cible</label>
    <nameField>
        <displayFormat>{000}</displayFormat>
        <label>Numéro de la Cible</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cibles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>