force-app/main/default/objects/Cible__c/fields/Cat_gorie_cible__c.field-meta.xml
<CustomField>
    <fullName>Cat_gorie_cible__c</fullName>
    <label>Catégorie cible</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cibles sectorielles</fullName>
            </value>
            <value>
                <fullName>Sociétés proches de l&apos;école</fullName>
            </value>
            <value>
                <fullName>Autres</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>