force-app/main/default/objects/Cible__c/fields/Cibles__c.field-meta.xml
<CustomField>
    <fullName>Cibles__c</fullName>
    <label>Cibles</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Cat_gorie_cible__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>120 plus grosses sociétés en Bourse</fullName>
            </value>
            <value>
                <fullName>BENEFPART</fullName>
            </value>
            <value>
                <fullName>Prescripteur CIO GE</fullName>
            </value>
            <value>
                <fullName>Prescripteur IDEA</fullName>
            </value>
            <value>
                <fullName>Sociétés clientes EML</fullName>
            </value>
            <value>
                <fullName>Sociétés crées par un diplômé</fullName>
            </value>
            <value>
                <fullName>Sociétés dans le secteur du Luxe</fullName>
            </value>
            <value>
                <fullName>Sociétés dans le secteur du Sport</fullName>
            </value>
            <value>
                <fullName>TAXEGEST</fullName>
            </value>
            <value>
                <fullName>TAXEPRES</fullName>
            </value>
            <value>
                <fullName>TAXEPRI</fullName>
            </value>
            <value>
                <fullName>TAXEPROC</fullName>
            </value>
            <value>
                <fullName>TAXEVIP</fullName>
            </value>
            <value>
                <fullName>Fournisseurs de l&apos;école</fullName>
            </value>
            <value>
                <fullName>Société ETI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>