force-app/main/default/objects/Cible__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Cibles__c</columns>
    <columns>Cat_gorie_cible__c</columns>
    <columns>Compte__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tout</label>
    <language>fr</language>
</ListView>